# CambriconPrj

./: .travis.yml  README.md
GH_Test/: CMakeLists.txt  LICENSE  README  version.txt
GH_Test/include/: cncodec_demo_common.h  cncodec_semaphore.h  jpeg_decode_context.h  jpeg_encode_context.h  video_decode_context.h  video_encode_context.h
GH_Test/platform/include/: activity_api.h  callbackapi.h  callbackapi_types.h  cn_codec_common.h  cn_jpeg_dec.h  cn_jpeg_enc.h  cn_video_dec.h  cn_video_enc.h  cndev.h  cndrv_api.h  cndrv_id.h  cndrv_params.h  cnml.h  cnml_id.h  cnml_params.h  cnpapi.h  cnpapi_event_api.h  cnpapi_types.h  cnrt.h  cnrt_id.h  cnrt_params.h
GH_Test/src/: cncodec_demo_common.c  video_decode_context.c  video_decode_demo.c  video_encode_context.c  video_encode_demo.c
